<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackGround"
    tools:context="tr.loginactivity.RegistrationActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registrationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registrationSurName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_surname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<AutoCompleteTextView
                android:id="@+id/registrationPhoneCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_phone_number_code"
                android:editable="false"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />-->
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAlanKodu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/alanKodu">

            </android.support.v7.widget.AppCompatSpinner>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/registrationPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/registrationBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_date_birth"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/registrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_password"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/registrationReplacePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_registration_replace_password"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveUser"
            android:text="@string/prompt_registration_button"
            android:id="@+id/registrationSave"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="103dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    </ScrollView>
</RelativeLayout>
